[package]
name = "lens"
version = "0.2.0"
edition = "2024"
description = "Unified Lens query language"
authors = ["cuppachino"]
homepage = "https://github.com/cuppachino/lens"
repository = "https://github.com/cuppachino/lens"
readme = "README.md"
license = "MIT"

[dependencies]
derive_flat_debug = { path = "../derive_flat_debug" }
derive_more = { version = "2.0.1", features = [
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "into_iterator",
] }
pest = { version = "2.8.0" }
pest_derive = "2.8.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "tokenizer"
harness = false

[features]
default = ["wild_until_last"]
# Do not coerce queries ending with `**` to `**.*`
wild_until_last = []
